# referralready-agent

./: .env.example  .gitignore  LICENSE  Makefile  README.md  README.referralready-data.md  README.zh.md  demo_output.md  pyproject.toml  render.yaml  requirements.txt
app/: __init__.py  config.py  data_store.py  fhir_store.py  mcp_server.py  platform_context.py  safety.py  scorecard.py  tools.py
data/checklists/: cardiology.json  endocrinology.json  nephrology.json
data/synthetic_fhir/: SYN-CKD-001.json  SYN-CKD-004.json  SYN-DM-003.json  SYN-DM-006.json  SYN-HF-002.json  SYN-HF-005.json
demo-video/: .gitignore  package-lock.json  package.json
demo-video/src/: Composition.tsx  Root.tsx
docs/: architecture.md  demo_script.md  marketplace_setup.md  prompt_opinion_publish_checklist.md  render_deploy.md  safety.md
docs/plans/: 2026-04-22-referralready-competition-design.md  2026-04-22-referralready-competition-plan.md
prompts/: care_task_generator.md  missing_info_checker.md  referral_packet_system.md
scripts/: run_local_demo.py  score_submission.py
submission/: devpost_draft.md  prompt_opinion_manifest.example.json
tests/: test_fhir_context.py  test_referralready.py  test_render_blueprint.py  test_scorecard.py  test_server_runtime.py
